# Northline

./: .gitignore  AI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVNOTES.md  README.md  ROADMAP.md  RULES.md  SECURITY.md  TODO.md
.claude/: CLAUDE.md
.claude/rules/: code-style.md  security.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: errors.rs  lib.rs
core/tests/: basic.rs
crypto/: Cargo.toml
crypto/src/: errors.rs  lib.rs
desktop/: Cargo.toml  build.rs
desktop/src/: main.rs
desktop/ui/: MainWindow.slint
docs/: ARCHITECTURE.md  SECURITY.md  STRUCTURE.md
northline/core/src/: errors.rs
northline/crypto/src/: lib.rs
northline/desktop/ui/: MainWindow.slint
